--- a/css/mediaboxAdvBlack.css
+++ b/css/mediaboxAdvBlack.css
@@ -1,4 +1,8 @@
-/* mediaboxAdvanced - black theme */
+		/*	mediaboxAdvanced Black theme	*/
+		/*	version 2.0 - August 2010		*/
+		/*	for mediaboxAdvanced v.1.3.0	*/
+
+		/*	Overlay background styling	*/
 
 #mbOverlay {
 	position: fixed;
@@ -19,27 +23,38 @@
 	position: absolute;
 }
 
+		/*	Overlay panel styling	*/
+
 #mbCenter {
 	position: absolute;
 	z-index: 9999;
 	left: 50%;
 	overflow: hidden;
 	background-color: #000;
-	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
-	-moz-box-shadow: 0px 10px 40px rgba(0,0,0,0.70);
-	-webkit-box-shadow: 0px 10px 40px rgba(0,0,0,0.70);
+	-khtml-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
+	-khtml-box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
+	-moz-box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
+	box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
+	/* For IE 8 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000')";
+	/* For IE 5.5 - 7 */
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000');
 }
 
 #mbCenter.mbLoading {
 	background: #000 url(/images/BlackLoading.gif) no-repeat center;
-
 /*	This style is applied only during animation.	*/
-/*	For example, the following turns off shadows,	*/
-/*	helping browser performance on slow systems.	*/
-/*	To leave shadows on, just remove these lines:	*/
-	-moz-box-shadow: none;
+/*	For example, the next lines turn off shadows	*/
+/*	improving browser performance on slow systems.	*/
+/*	To leave shadows on, just remove the following:	*/
 	-webkit-box-shadow: none;
+	-khtml-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
 }
 
 #mbImage {
@@ -47,7 +62,8 @@
 	left: 0;
 	top: 0;
 
-/*	Begin styles for inline content, if no style is given	*/
+		/*	Inline content styling	*/
+
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	line-height: 20px;
 	font-size: 12px;
@@ -58,15 +74,17 @@
 	padding: 10px;
 }
 
-#mbImage a, #mbImage a:link, #mbImage a:visited {
+#mbCenter a, #mbCenter a:link, #mbCenter a:visited {
+/*	text-decoration: none;		*/
 	color: #ddd;
 }
 
-#mbImage a:hover, #mbImage a:active {
+#mbCenter a:hover, #mbCenter a:active {
+/*	text-decoration: underline;	*/
 	color: #fff;
 }
 
-/*	End inline content styles	*/
+		/*	Caption and Button styling	*/
 
 #mbBottom {
 	min-height: 20px;
@@ -78,7 +96,7 @@
 	padding: 0 10px 10px;
 }
 
-#mbTitle {
+#mbTitle, #mbPrevLink, #mbNextLink, #mbCloseLink {
 	display: inline;
 	color: #fff;
 	font-weight: bold;
@@ -101,30 +119,23 @@
 	font-size: 10px;
 }
 
+		/*	Button styling	*/
+
 #mbPrevLink, #mbNextLink, #mbCloseLink {
-	display: block;
 	float: right;
-	height: 20px;
-	margin: 0;
 	outline: none;
+	margin: 0 0 0 10px;
+	font-weight: normal;
+	font-size: 10px;
 }
 
-#mbPrevLink {
-	width: 69px;
-	background: transparent url(/images/BlackPrevious.gif) no-repeat center;
+#mbPrevLink b, #mbNextLink b, #mbCloseLink b {
+	font-size: 16px;
+	font-weight: bold;
+	text-decoration: none;
 }
 
-#mbNextLink {
-	width: 41px;
-	background: transparent url(/images/BlackNext.gif) no-repeat center;
-}
-
-#mbCloseLink {
-	width: 46px;
-	background: transparent url(/images/BlackClose.gif) no-repeat center;
-}
-
-/*	Styles for flash version alert	*/
+		/*	Error message styling	*/
 
 #mbError {
 	position: relative;
@@ -136,8 +147,10 @@
 	border: 10px solid #700;
 	padding: 10px 10px 10px;
 	margin: 20px;
-	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
+	-khtml-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 }
 
 #mbError a, #mbError a:link, #mbError a:visited, #mbError a:hover, #mbError a:active {
