Revamped demo, starting on new style sheets

--- a/Source/mediaboxAdv-Minimal.css
+++ b/Source/mediaboxAdv-Minimal.css
@@ -1,6 +1,6 @@
-		/*	mediaboxAdvanced Black theme	*/
-		/*	version 2.1 - August 2010		*/
-		/*	for mediaboxAdvanced v.1.3.1	*/
+		/*	mediaboxAdvanced Minimal theme	*/
+		/*	version 2.5 - May 2011			*/
+		/*	for mediaboxAdvanced v.1.5.x	*/
 
 		/*	Overlay background styling	*/
 
