--- a/Docs/files/mediaboxAdv-Dark.css
+++ b/Docs/files/mediaboxAdv-Dark.css
@@ -11,7 +11,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0.7);
+	background-color: #000;
 	cursor: pointer;
 }
 
@@ -59,7 +59,7 @@
 	box-shadow: none;
 }
 
-#mbImage {
+#mbMedia {
 	position: relative;
 	left: 0;
 	top: 0;
