--- a/Source/mediaboxAdv-Dark.css
+++ b/Source/mediaboxAdv-Dark.css
@@ -18,7 +18,7 @@
 		/*	Legacy fix for older browsers	*/
 
 #mbOverlay.mbOverlayFF {
-	background: transparent url(/images/80.png) repeat;
+	background: transparent url(80.png) repeat;
 }
 
 #mbOverlay.mbOverlayIE {
@@ -48,7 +48,7 @@
 }
 
 #mbCenter.mbLoading {
-	background: #000 url(/images/loading.gif) no-repeat center;
+	background: #000 url(loading-dark.gif) no-repeat center;
 		/*	This style is applied only during animation.	*/
 		/*	For example, the next lines turn off shadows	*/
 		/*	improving browser performance on slow systems.	*/
@@ -59,7 +59,7 @@
 	box-shadow: none;
 }
 
-#mbImage {
+#mbMedia {
 	position: relative;
 	left: 0;
 	top: 0;
