--- a/Docs/files/mediaboxAdv-Light.css
+++ b/Docs/files/mediaboxAdv-Light.css
@@ -11,7 +11,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0.8,0.8,0.8,0.75);
+	background-color: #ccc;
 	cursor: pointer;
 }
 
@@ -59,7 +59,7 @@
 	box-shadow: none;
 }
 
-#mbImage {
+#mbMedia {
 	position: relative;
 	left: 0;
 	top: 0;
@@ -74,6 +74,18 @@
 	background-position: center center;
 	background-repeat: no-repeat;
 	padding: 10px;
+}
+
+@mbMedia img {
+	-webkit-border-radius: 4px;
+	-khtml-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+#mbAudio {
+	padding: 0 0 2px;
+	background-color: #000;
 }
 
 		/*	Title, Caption and Button styling	*/
