--- a/Docs/files/mediaboxAdv-Smooth.css
+++ b/Docs/files/mediaboxAdv-Smooth.css
@@ -12,7 +12,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0.7);
+	background-color: #000;
 	cursor: pointer;
 }
 
@@ -68,7 +68,7 @@
 	box-shadow: none;
 }
 
-#mbImage {
+#mbMedia {
 	position: relative;
 	left: 0;
 	top: 0;
@@ -86,6 +86,26 @@
 	text-align: left;
 	background-position: center center;
 	background-repeat: no-repeat;
+}
+
+
+#mbAudio {
+	padding: 0 0 2px;
+	-webkit-border-radius: 4px;
+	-khtml-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	background-color: #999;	/* for non-css3 browsers */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#cccccc');
+	background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#aaa));
+	background: -moz-linear-gradient(top,  #999,  #ccc);
+	background: -o-linear-gradient(top,  #999,  #ccc);
+	background: linear-gradient(top,  #999,  #ccc);
+	border: 1px solid #fff;
+	border-top-color: #777;
+	border-bottom-color: #eee;
+	border-right-width: 0px;
+	border-left-width: 0px;
 }
 
 		/*	Title, Caption and Button styling	*/
@@ -153,12 +173,27 @@
 	border-radius: 4px;
 }
 
-#mbBottom a:hover, #mbBottom a:active {
+#mbBottom a:hover {
 	color: #000;
-	background-color: rgba(0,0,0,0.1);
 	text-shadow: rgba(255,255,255,1.0) 0 1px 1px;
+	background-color: #ccc;	/* for non-css3 browsers */
 }
 
+#mbBottom a:active {
+	color: #000;
+	text-shadow: rgba(255,255,255,1.0) 0 1px 1px;
+	background-color: #999;	/* for non-css3 browsers */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#cccccc');
+	background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#aaa));
+	background: -moz-linear-gradient(top,  #999,  #ccc);
+	background: -o-linear-gradient(top,  #999,  #ccc);
+	background: linear-gradient(top,  #999,  #ccc);
+	border: 1px solid #fff;
+	border-top-color: #777;
+	border-bottom-color: #eee;
+	border-right-width: 0px;
+	border-left-width: 0px;
+}
 
 		/*	Error message styling	*/
 
