--- a/Source/mediaboxAdv-Light.css
+++ b/Source/mediaboxAdv-Light.css
@@ -11,14 +11,14 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #000;
+	background-color: #ccc;
 	cursor: pointer;
 }
 
 		/*	Legacy fix for older browsers	*/
 
 #mbOverlay.mbOverlayFF {
-	background: transparent url(/images/80.png) repeat;
+	background: transparent url(files/80.png) repeat;
 }
 
 #mbOverlay.mbOverlayIE {
@@ -32,7 +32,7 @@
 	z-index: 9999;
 	left: 50%;
 	overflow: hidden;
-	background-color: #000;
+	background-color: #fff;
 	-webkit-border-radius: 10px;
 	-khtml-border-radius: 10px;
 	-moz-border-radius: 10px;
@@ -48,7 +48,7 @@
 }
 
 #mbCenter.mbLoading {
-	background: #000 url(/images/loading.gif) no-repeat center;
+	background: #fff url(loading-light.gif) no-repeat center;
 		/*	This style is applied only during animation.	*/
 		/*	For example, the next lines turn off shadows	*/
 		/*	improving browser performance on slow systems.	*/
@@ -59,7 +59,7 @@
 	box-shadow: none;
 }
 
-#mbImage {
+#mbMedia {
 	position: relative;
 	left: 0;
 	top: 0;
@@ -69,11 +69,23 @@
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	line-height: 20px;
 	font-size: 12px;
-	color: #fff;
+	color: #000;
 	text-align: left;
 	background-position: center center;
 	background-repeat: no-repeat;
 	padding: 10px;
+}
+
+@mbMedia img {
+	-webkit-border-radius: 4px;
+	-khtml-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+#mbAudio {
+	padding: 0 0 2px;
+	background-color: #000;
 }
 
 		/*	Title, Caption and Button styling	*/
@@ -83,14 +95,14 @@
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	line-height: 20px;
 	font-size: 12px;
-	color: #999;
+	color: #777;
 	text-align: left;
 	padding: 0 10px 10px;
 }
 
 #mbTitle, #mbPrevLink, #mbNextLink, #mbCloseLink {
 	display: inline;
-	color: #fff;
+	color: #000;
 	font-weight: bold;
 	line-height: 20px;
 	font-size: 12px;
@@ -98,7 +110,7 @@
 
 #mbNumber {
 	display: inline;
-	color: #999;
+	color: #777;
 	line-height: 14px;
 	font-size: 10px;
 	margin: auto 10px;
@@ -106,7 +118,7 @@
 
 #mbCaption {
 	display: block;
-	color: #999;
+	color: #777;
 	line-height: 14px;
 	font-size: 10px;
 }
@@ -119,13 +131,13 @@
 }
 
 #mbPrevLink b, #mbNextLink b, #mbCloseLink b {
-	color: #eee;
+	color: #333;
 	font-weight: bold;
 	text-decoration: underline;
 }
 
 #mbPrevLink big, #mbNextLink big, #mbCloseLink big {
-	color: #eee;
+	color: #333;
 	font-size: 16px;
 	line-height: 14px;
 	font-weight: bold;
@@ -133,12 +145,12 @@
 
 #mbBottom a, #mbBottom a:link, #mbBottom a:visited {	/* Thanks to Danny Jung for feedback and corrections */
 	text-decoration: none;
-	color: #ddd;
+	color: #333;
 }
 
 #mbBottom a:hover, #mbBottom a:active {
 	text-decoration: underline;
-	color: #fff;
+	color: #000;
 }
 
 
