--- a/Docs/files/mediaboxAdv-Dark.css
+++ b/Docs/files/mediaboxAdv-Dark.css
@@ -1,4 +1,4 @@
-		/*	mediaboxAdvanced Black theme	*/
+		/*	mediaboxAdvanced Dark theme	*/
 		/*	version 2.5 - May 2011			*/
 		/*	for mediaboxAdvanced v.1.5.x	*/
 
@@ -15,13 +15,13 @@
 	cursor: pointer;
 }
 
-		/*	Legacy fix for older browsers	*/
+		/*	Fixes for older or limited browsers	*/
 
-#mbOverlay.mbOverlayFF {
+#mbOverlay.mbOverlayOpaque {
 	background: transparent url(80.png) repeat;
 }
 
-#mbOverlay.mbOverlayIE {
+#mbOverlay.mbOverlayAbsolute {
 	position: absolute;
 }
 
@@ -31,20 +31,17 @@
 	position: absolute;
 	z-index: 9999;
 	left: 50%;
-	overflow: hidden;
 	background-color: #000;
 	-webkit-border-radius: 10px;
 	-khtml-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000'); /* For IE 5.5 - 7 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000')"; /* For IE 8 */
 	-webkit-box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
 	-khtml-box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
 	-moz-box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
 	box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
-	/* For IE 8 */
-	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000')";
-	/* For IE 5.5 - 7 */
-	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000');
 }
 
 #mbCenter.mbLoading {
@@ -79,12 +76,12 @@
 		/*	Title, Caption and Button styling	*/
 
 #mbBottom {
-	min-height: 20px;
-	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	line-height: 20px;
 	font-size: 12px;
-	color: #999;
+	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
+	color: #999;
+	min-height: 20px;
 	padding: 0 10px 10px;
 }
 
