--- a/Docs/files/mediaboxAdv-Minimal.css
+++ b/Docs/files/mediaboxAdv-Minimal.css
@@ -15,13 +15,13 @@
 	cursor: pointer;
 }
 
-		/*	Legacy fix for older browsers	*/
+		/*	Fixes for older or limited browsers	*/
 
-#mbOverlay.mbOverlayFF {
+#mbOverlay.mbOverlayOpaque {
 	background: transparent url(80.png) repeat;
 }
 
-#mbOverlay.mbOverlayIE {
+#mbOverlay.mbOverlayAbsolute {
 	position: absolute;
 }
 
@@ -31,7 +31,6 @@
 	position: absolute;
 	z-index: 9999;
 	left: 50%;
-/*	overflow: hidden;*/
 	background-color: rgba(0,0,0,0.4);
 }
 
@@ -47,10 +46,8 @@
 	-khtml-box-shadow: 0px 5px 20px rgba(0,0,0,0.60);
 	-moz-box-shadow: 0px 5px 20px rgba(0,0,0,0.60);
 	box-shadow: 0px 5px 20px rgba(0,0,0,0.60);
-	/* For IE 8 */
-	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000')";
-	/* For IE 5.5 - 7 */
-	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000');
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000'); /* For IE 5.5 - 7 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000')"; /* For IE 8 */
 
 		/*	Inline content styling	*/
 
@@ -66,12 +63,12 @@
 		/*	Title, Caption and Button styling	*/
 
 #mbBottom {
-	min-height: 20px;
-	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	line-height: 20px;
 	font-size: 12px;
-	color: #999;
+	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
+	color: #999;
+	min-height: 20px;
 	padding: 10px 6px 4px;
 }
 
@@ -127,7 +124,6 @@
 	text-decoration: underline;
 	color: #fff;
 }
-
 
 		/*	Error message styling	*/
 
