--- a/Docs/files/mediaboxAdv-Smooth.css
+++ b/Docs/files/mediaboxAdv-Smooth.css
@@ -8,15 +8,14 @@
 	position: fixed;
 	z-index: 9998;
 	top: 0;
-/*	bottom: 0;	*/
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #000;
+	background-color: #222;
 	cursor: pointer;
 }
 
-		/*	Legacy fix for older browsers	*/
+		/*	Fixes for older or limited browsers	*/
 
 #mbOverlay.mbOverlayOpaque {
 	background: transparent url(80.png) repeat;
@@ -32,14 +31,15 @@
 	position: absolute;
 	z-index: 9999;
 	left: 50%;
-	overflow: hidden;
 	-webkit-border-radius: 10px;
 	-khtml-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
 	background-color: #bbb;	/* for non-css3 browsers */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#aaaaaa');
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#aaaaaa'); /* IE 5.5 - 7 */
+	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#aaaaaa'); /* IE 8 */
 	background: -webkit-gradient(linear, left top, left bottom, from(#ddd), to(#aaa));
+	background: -khtml-gradient(linear, left top, left bottom, from(#ddd), to(#aaa));
 	background: -moz-linear-gradient(top,  #ddd,  #aaa);
 	background: -o-linear-gradient(top,  #ddd,  #aaa);
 	background: linear-gradient(top,  #ddd,  #aaa);
@@ -96,8 +96,10 @@
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 	background-color: #999;	/* for non-css3 browsers */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#cccccc');
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#cccccc'); /* IE 5.5 - 7 */
+	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#cccccc'); /* IE 8 */
 	background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#aaa));
+	background: -khtml-gradient(linear, left top, left bottom, from(#888), to(#aaa));
 	background: -moz-linear-gradient(top,  #999,  #ccc);
 	background: -o-linear-gradient(top,  #999,  #ccc);
 	background: linear-gradient(top,  #999,  #ccc);
@@ -106,17 +108,18 @@
 	border-bottom-color: #eee;
 	border-right-width: 0px;
 	border-left-width: 0px;
+	height: 20px;
 }
 
 		/*	Title, Caption and Button styling	*/
 
 #mbBottom {
-	min-height: 20px;
-	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	line-height: 20px;
 	font-size: 12px;
-	color: #444;
+	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
+	color: #444;
+	min-height: 20px;
 	padding: 10px 0 0;
 }
 
@@ -183,8 +186,10 @@
 	color: #000;
 	text-shadow: rgba(255,255,255,1.0) 0 1px 1px;
 	background-color: #999;	/* for non-css3 browsers */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#cccccc');
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#cccccc'); /* IE 5.5 - 7 */
+	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#cccccc'); /* IE 8 */
 	background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#aaa));
+	background: -khtml-gradient(linear, left top, left bottom, from(#888), to(#aaa));
 	background: -moz-linear-gradient(top,  #999,  #ccc);
 	background: -o-linear-gradient(top,  #999,  #ccc);
 	background: linear-gradient(top,  #999,  #ccc);
