--- a/Source/mediaboxAdv-Dark.css
+++ b/Source/mediaboxAdv-Dark.css
@@ -10,7 +10,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 150%;
 	background-color: #000;
 	cursor: pointer;
 }
@@ -25,12 +25,23 @@
 	position: absolute;
 }
 
+#mbOverlay.mbMobile {
+	position: absolute;
+	background-color: transparent;
+}
+
+#mbBottom.mbMobile {
+	line-height: 28px;
+	font-size: 24px;
+}
+
 		/*	Overlay panel styling	*/
 
 #mbCenter {
 	position: absolute;
 	z-index: 9999;
 	left: 50%;
+	padding: 10px;
 	background-color: #000;
 	-webkit-border-radius: 10px;
 	-khtml-border-radius: 10px;
@@ -70,7 +81,7 @@
 	text-align: left;
 	background-position: center center;
 	background-repeat: no-repeat;
-	padding: 10px;
+/*	padding: 10px;*/
 }
 
 		/*	Title, Caption and Button styling	*/
@@ -81,31 +92,30 @@
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
 	color: #999;
-	min-height: 20px;
-	padding: 0 10px 10px;
+/*	min-height: 20px;	*/
+/*	padding: 0 10px 10px;*/
+	padding: 10px 0 0;
 }
 
 #mbTitle, #mbPrevLink, #mbNextLink, #mbCloseLink {
 	display: inline;
 	color: #fff;
 	font-weight: bold;
-	line-height: 20px;
-	font-size: 12px;
 }
 
 #mbNumber {
 	display: inline;
 	color: #999;
-	line-height: 14px;
-	font-size: 10px;
+/*	line-height: 0.8em; */
+	font-size: 0.8em;
 	margin: auto 10px;
 }
 
 #mbCaption {
 	display: block;
 	color: #999;
-	line-height: 14px;
-	font-size: 10px;
+	line-height: 1.6em;
+	font-size: 0.8em;
 }
 
 #mbPrevLink, #mbNextLink, #mbCloseLink {
@@ -123,8 +133,8 @@
 
 #mbPrevLink big, #mbNextLink big, #mbCloseLink big {
 	color: #eee;
-	font-size: 16px;
-	line-height: 14px;
+	font-size: 1.4em;
+/*	line-height: 0.9em;*/
 	font-weight: bold;
 }
 
@@ -137,7 +147,6 @@
 	text-decoration: underline;
 	color: #fff;
 }
-
 
 		/*	Error message styling	*/
 
