--- a/Source/mediaboxAdv-Minimal.css
+++ b/Source/mediaboxAdv-Minimal.css
@@ -1,5 +1,5 @@
 		/*	mediaboxAdvanced Minimal theme	*/
-		/*	version 2.5 - May 2011			*/
+		/*	version 2.5 - June 2011			*/
 		/*	for mediaboxAdvanced v.1.5.x	*/
 
 		/*	Overlay background styling	*/
@@ -23,6 +23,16 @@
 
 #mbOverlay.mbOverlayAbsolute {
 	position: absolute;
+}
+
+#mbOverlay.mbMobile {
+	position: absolute;
+	background-color: transparent;
+}
+
+#mbBottom.mbMobile {
+	line-height: 24px;
+	font-size: 18px;
 }
 
 		/*	Overlay panel styling	*/
@@ -68,7 +78,7 @@
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
 	color: #999;
-	min-height: 20px;
+/*	min-height: 20px;	*/
 	padding: 10px 6px 4px;
 }
 
@@ -76,23 +86,21 @@
 	display: inline;
 	color: #fff;
 	font-weight: bold;
-	line-height: 20px;
-	font-size: 12px;
 }
 
 #mbNumber {
 	display: inline;
 	color: #999;
-	line-height: 14px;
-	font-size: 10px;
+/*	line-height: 0.8em; */
+	font-size: 0.8em;
 	margin: auto 10px;
 }
 
 #mbCaption {
 	display: block;
 	color: #999;
-	line-height: 14px;
-	font-size: 10px;
+	line-height: 1.6em;
+	font-size: 0.8em;
 }
 
 #mbPrevLink, #mbNextLink, #mbCloseLink {
@@ -110,8 +118,8 @@
 
 #mbPrevLink big, #mbNextLink big, #mbCloseLink big {
 	color: #eee;
-	font-size: 16px;
-	line-height: 14px;
+	font-size: 1.4em;
+/*	line-height: 0.9em;*/
 	font-weight: bold;
 }
 
