--- a/Docs/files/mediaboxAdv-Dark.css
+++ b/Docs/files/mediaboxAdv-Dark.css
@@ -81,7 +81,6 @@
 	text-align: left;
 	background-position: center center;
 	background-repeat: no-repeat;
-/*	padding: 10px;*/
 }
 
 		/*	Title, Caption and Button styling	*/
@@ -92,8 +91,7 @@
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
 	color: #999;
-/*	min-height: 20px;	*/
-/*	padding: 0 10px 10px;*/
+	min-height: 20px;
 	padding: 10px 0 0;
 }
 
