--- a/Docs/files/mediaboxAdv-Minimal.css
+++ b/Docs/files/mediaboxAdv-Minimal.css
@@ -78,7 +78,7 @@
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
 	color: #999;
-/*	min-height: 20px;	*/
+	min-height: 20px;
 	padding: 10px 6px 4px;
 }
 
