--- a/Docs/files/mediaboxAdv-Smooth.css
+++ b/Docs/files/mediaboxAdv-Smooth.css
@@ -129,7 +129,7 @@
 	font-family: Myriad, Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
 	color: #444;
-/*	min-height: 20px;	*/
+	min-height: 20px;
 	padding: 10px 0 0;
 }
 
