--- a/Source/css/mediaboxAdv-Dark.css
+++ b/Source/css/mediaboxAdv-Dark.css
@@ -1,4 +1,4 @@
-		/*	mediaboxAdvanced Minimal theme	*/
+		/*	mediaboxAdvanced Dark theme	*/
 		/*	version 2.6 - June 2011			*/
 		/*	for mediaboxAdvanced v.1.5.x	*/
 
@@ -10,7 +10,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 150%;
 	background-color: #000;
 	cursor: pointer;
 }
@@ -18,7 +18,7 @@
 		/*	Fixes for older or limited browsers	*/
 
 #mbOverlay.mbOverlayOpaque {
-	background: transparent url(80.png) repeat;
+	background: transparent url(../images/80.png) repeat;
 }
 
 #mbOverlay.mbOverlayAbsolute {
@@ -32,7 +32,7 @@
 
 #mbBottom.mbMobile {
 	line-height: 24px;
-	font-size: 14px;
+	font-size: 16px;
 }
 
 		/*	Overlay panel styling	*/
@@ -41,23 +41,36 @@
 	position: absolute;
 	z-index: 9999;
 	left: 50%;
-	background-color: rgba(0,0,0,0.4);
+	padding: 10px;
+	background-color: #000;
+	-webkit-border-radius: 10px;
+	-khtml-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000'); /* For IE 5.5 - 7 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000')"; /* For IE 8 */
+	-webkit-box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
+	-khtml-box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
+	-moz-box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
+	box-shadow: 0px 5px 20px rgba(0,0,0,0.50);
 }
 
 #mbCenter.mbLoading {
-	background: rgba(0,0,0,0.4) url(loading-minimal.gif) no-repeat center;
+	background: #000 url(../images/loading-dark.gif) no-repeat center;
+		/*	This style is applied only during animation.	*/
+		/*	For example, the next lines turn off shadows	*/
+		/*	improving browser performance on slow systems.	*/
+		/*	To leave shadows on, just remove the following:	*/
+	-webkit-box-shadow: none;
+	-khtml-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
 }
 
 #mbMedia {
 	position: relative;
 	left: 0;
 	top: 0;
-	-webkit-box-shadow: 0px 5px 20px rgba(0,0,0,0.60);
-	-khtml-box-shadow: 0px 5px 20px rgba(0,0,0,0.60);
-	-moz-box-shadow: 0px 5px 20px rgba(0,0,0,0.60);
-	box-shadow: 0px 5px 20px rgba(0,0,0,0.60);
-	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000'); /* For IE 5.5 - 7 */
-	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=180, Color='#000000')"; /* For IE 8 */
 
 		/*	Inline content styling	*/
 
@@ -79,7 +92,7 @@
 	text-align: left;
 	color: #999;
 	min-height: 20px;
-	padding: 10px 6px 4px;
+	padding: 10px 0 0;
 }
 
 #mbTitle, #mbPrevLink, #mbNextLink, #mbCloseLink {
